fix: remove useless scroll on mobile device

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,10 +11,6 @@
   font-family: Avenir, Helvetica, Arial, sans-serif;
 }
 
-#app {
-  min-height: 100vh;
-}
-
 .container {
   margin: 0 auto;
   max-width: 1000px;
